# commonMath

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Tests/: CMakeLists.txt  TestComplex.cpp
include/: Complex.h  ComplexPoly.h  Matrix.h  Poly.h  helper.h
source/: Complex.cpp  ComplexPoly.cpp  Poly.cpp
